# indian-stock-market

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.cache/jugaad/nsehistory-stock/: 2024-04-20-EQ-RELIANCE-2024-04-30  2024-05-01-EQ-RELIANCE-2024-05-31  2024-06-01-EQ-RELIANCE-2024-06-30  2024-07-01-EQ-RELIANCE-2024-07-31  2024-08-01-EQ-RELIANCE-2024-08-31  2024-09-01-EQ-RELIANCE-2024-09-30  2024-10-01-EQ-RELIANCE-2024-10-31  2024-11-01-EQ-RELIANCE-2024-11-30  2024-12-01-EQ-RELIANCE-2024-12-31  2025-01-01-EQ-RELIANCE-2025-01-31  2025-02-01-EQ-RELIANCE-2025-02-28  2025-03-01-EQ-RELIANCE-2025-03-31  2025-04-01-EQ-RELIANCE-2025-04-30  2025-05-01-EQ-RELIANCE-2025-05-31  2025-06-01-EQ-RELIANCE-2025-06-30  2025-07-01-EQ-RELIANCE-2025-07-31  2025-08-01-EQ-RELIANCE-2025-08-31  2025-09-01-EQ-RELIANCE-2025-09-30  2025-10-01-EQ-RELIANCE-2025-10-31  2025-11-01-EQ-RELIANCE-2025-11-30  2025-12-01-EQ-RELIANCE-2025-12-31  2026-01-01-EQ-RELIANCE-2026-01-31  2026-02-01-EQ-RELIANCE-2026-02-28  2026-03-01-EQ-RELIANCE-2026-03-31  2026-04-01-EQ-RELIANCE-2026-04-20
.cache/market_data/bhavcopy_eq/: cm18Apr2026bhav.csv
docs/: architecture.md
src/indian_stock_pipeline/: __init__.py
src/indian_stock_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/indian_stock_pipeline/ai/: __init__.py  ai_service.py
src/indian_stock_pipeline/backtesting/: vectorbt_runner.py
src/indian_stock_pipeline/core/: __init__.py  config.py  pipeline.py  schemas.py
src/indian_stock_pipeline/data/: __init__.py  (+3 more)
(+12 files in other folders)
