[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indian-stock-pipeline"
version = "0.1.0"
description = "Interactive Indian stock analysis pipeline with regime detection, pattern mining, and buy/exit guidance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "scipy>=1.13.1",
  "scikit-learn>=1.5.1",
  "statsmodels>=0.14.2",
  "streamlit>=1.44.1",
  "plotly>=5.24.1",
  "requests>=2.32.3",
  "yfinance>=0.2.54",
  "python-dotenv>=1.0.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "hmmlearn>=0.3.2",
  "pykalman>=0.9.7",
  "ruptures>=1.1.9",
  "stumpy>=1.13.0",
  "hurst>=0.0.5",
  "jugaad-data>=0.33.1",
  "nsepython>=2.97; sys_platform == 'win32'",
  "nsepythonserver>=2.97; sys_platform != 'win32'",
  "vectorbt>=0.26.2",
  "torch>=2.5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
